# ClaudeCodeAgentClone

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: git-github.mdc
.opencode/: README.md
agent/: __init__.py  __main__.py  cli.py  config_loader.py  env.py  guardrails.py  jsonutil.py  llm.py  ollama_client.py  opencode_adapter.py  repo_context.py  skills.py  trace.py
agent/flows/: __init__.py  executor.py  memory_flow.py  planner.py  reviewer.py
agent/loop/: decide.py  (+4 more)
config/: guardrails.json  models.json  workspace.json
docs/: INTEGRATION-OPENCODE.md
logs/: last-review.json
memory/: README.md  architecture.md  conventions.md  repo-summary.md  repo-summary.template.md
prompts/: decide.next.md  executor.md  memory.generator.md  multi-agent.md  planner.md  planner.secure-refactor.md  reviewer.md  system.base.md
scripts/: bootstrap.sh  doctor.sh  execute.sh  lib.sh  loop.sh  memory-update.sh  opencode-run.sh  pipeline.sh  plan.sh  review.sh  run-agent.sh  sample-secure-refactor-plan.sh
skills/: README.md  bug-fixing.md  codebase-analysis.md  command-safety.md  documentation-writer.md  feature-implementation.md  refactor-review.md  repo-onboarding.md  secure-refactor-planning.md  security-review.md  test-generation.md
tasks/: README.md  custom-improve-error-handling.task.json  example-bugfix.task.json  example-feature.task.json  secure-refactor-analysis.task.json  template.task.json
tests/: __init__.py  test_env.py  test_guardrails.py  test_jsonutil.py  test_pipeline_state.py
(+6 files in other folders)
