[project]
name = "local-agent-workspace"
version = "0.1.0"
description = "Local-first agent workspace (Ollama, optional OpenCode)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
